include/El/lapack_like/funcs.h

/* TODO: Expert version */

/* Hermitian Positive Semi-Definite
   -------------------------------- */
EL_EXPORT ElError ElHPSDSquareRoot_s( ElUpperOrLower uplo, ElMatrix_s A );
EL_EXPORT ElError ElHPSDSquareRoot_d( ElUpperOrLower uplo, ElMatrix_d A );
EL_EXPORT ElError ElHPSDSquareRoot_c( ElUpperOrLower uplo, ElMatrix_c A );
EL_EXPORT ElError ElHPSDSquareRoot_z( ElUpperOrLower uplo, ElMatrix_z A );
EL_EXPORT ElError ElHPSDSquareRootDist_s
( ElUpperOrLower uplo, ElDistMatrix_s A );
EL_EXPORT ElError ElHPSDSquareRootDist_d
( ElUpperOrLower uplo, ElDistMatrix_d A );
EL_EXPORT ElError ElHPSDSquareRootDist_c
( ElUpperOrLower uplo, ElDistMatrix_c A );
EL_EXPORT ElError ElHPSDSquareRootDist_z
( ElUpperOrLower uplo, ElDistMatrix_z A );