include/El/lapack_like/funcs.py


lib.ElHPSDSquareRoot_s.argtypes = [c_uint,c_void_p]
lib.ElHPSDSquareRoot_s.restype = c_uint
lib.ElHPSDSquareRoot_d.argtypes = [c_uint,c_void_p]
lib.ElHPSDSquareRoot_d.restype = c_uint
lib.ElHPSDSquareRoot_c.argtypes = [c_uint,c_void_p]
lib.ElHPSDSquareRoot_c.restype = c_uint
lib.ElHPSDSquareRoot_z.argtypes = [c_uint,c_void_p]
lib.ElHPSDSquareRoot_z.restype = c_uint
lib.ElHPSDSquareRootDist_s.argtypes = [c_uint,c_void_p]
lib.ElHPSDSquareRootDist_s.restype = c_uint
lib.ElHPSDSquareRootDist_d.argtypes = [c_uint,c_void_p]
lib.ElHPSDSquareRootDist_d.restype = c_uint
lib.ElHPSDSquareRootDist_c.argtypes = [c_uint,c_void_p]
lib.ElHPSDSquareRootDist_c.restype = c_uint
lib.ElHPSDSquareRootDist_z.argtypes = [c_uint,c_void_p]
lib.ElHPSDSquareRootDist_z.restype = c_uint
def HPSDSquareRoot(uplo,A):
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElHPSDSquareRoot_s(uplo,A.obj)
    elif A.tag == dTag: lib.ElHPSDSquareRoot_d(uplo,A.obj)
    elif A.tag == cTag: lib.ElHPSDSquareRoot_c(uplo,A.obj)
    elif A.tag == zTag: lib.ElHPSDSquareRoot_z(uplo,A.obj)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElHPSDSquareRootDist_s(uplo,A.obj)
    elif A.tag == dTag: lib.ElHPSDSquareRootDist_d(uplo,A.obj)
    elif A.tag == cTag: lib.ElHPSDSquareRootDist_c(uplo,A.obj)
    elif A.tag == zTag: lib.ElHPSDSquareRootDist_z(uplo,A.obj)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')
